// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "primary" 1`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-sm);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 2`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-md);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 3`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-lg);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 4`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: inherit;
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 5`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-md);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(min-width:480px) {
    div {
      font-size: var(--p-typescale-sm);
    }
}

@media(min-width:760px) {
    div {
      font-size: var(--p-typescale-md);
    }
}

@media(min-width:1000px) {
    div {
      font-size: var(--p-typescale-sm);
    }
}

@media(min-width:1300px) {
    div {
      font-size: var(--p-typescale-md);
    }
}

@media(min-width:1760px) {
    div {
      font-size: var(--p-typescale-sm);
    }
}

@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 6`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-sm);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 7`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-md);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 8`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-lg);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 9`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: inherit;
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;

exports[`getComponentCss() > should return correct css for size: "primary" 10`] = `
"@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 69;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 24;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 69;
    transform: rotateZ(360deg);
  }
}
  :host {
    display: inline-flex;
    vertical-align: top;
  }
  :host([hidden]) {
    display: none !important;
  }
  div {
    width: var(--p-spinner-size,var(--p-leading-normal));
    height: var(--p-spinner-size,var(--p-leading-normal));
    font-family: var(--p-font-porsche-next);
    font-size: var(--p-typescale-md);
  }
  svg {
    display: block;
    fill: none;
    stroke-width: 1.5;
    animation: rotate var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
  circle:first-child {
    stroke: var(--p-spinner-track-color,var(--p-color-contrast-lower));
  }
  circle:last-child {
    stroke: var(--p-spinner-color,var(--p-color-primary));
    stroke-dasharray: 69;
    stroke-linecap: round;
    animation: dash var(--p-animation-duration, var(--p-duration-xl)) steps(50) infinite;
  }
@media(min-width:480px) {
    div {
      font-size: var(--p-typescale-sm);
    }
}

@media(min-width:760px) {
    div {
      font-size: var(--p-typescale-md);
    }
}

@media(min-width:1000px) {
    div {
      font-size: var(--p-typescale-sm);
    }
}

@media(min-width:1300px) {
    div {
      font-size: var(--p-typescale-md);
    }
}

@media(min-width:1760px) {
    div {
      font-size: var(--p-typescale-sm);
    }
}

@media(forced-colors:active) {
    circle:last-child {
      stroke: CanvasText;
    }
    circle:first-child {
      stroke: none !important;
    }
}

@supports (color: oklch(from red l c h)) {
    circle:first-child {
      stroke: var(--p-spinner-track-color,oklch(from var(--p-spinner-color,var(--p-color-primary)) l c h/.2));
    }
}

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }"
`;
